integrated with ncarg interpolation library
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@384 500a5620-302c-0410-bb8c-d54761bbe776

--- a/volgrid6d/Makefile.am
+++ b/volgrid6d/Makefile.am
@@ -22,6 +22,10 @@ libsim_volgrid6d_la_SOURCES = grid_class.F90 rotated_ll_class.f90 regular_ll_cla
 libsim_volgrid6d_la_LIBADD += $(GRIBAPI_LIBS)
 endif
 
+if NGMATH
+AM_FCFLAGS+=-DNGMATH
+endif
+
 
 
 if GRIBAPI
