Completato e documentato getopt_m e il relativo esempio, modificati di conseguenza alcuni esempi.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@389 500a5620-302c-0410-bb8c-d54761bbe776

--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -27,6 +27,8 @@ missing_values.$(OBJEXT): kinds.$(OBJEXT)
 missing_values.lo: kinds.$(OBJEXT)
 optional_values.$(OBJEXT): missing_values.$(OBJEXT)
 optional_values.lo: missing_values.$(OBJEXT)
+getopt_m.$(OBJEXT): err_handling.$(OBJEXT)
+getopt_m.lo: err_handling.$(OBJEXT)
 
 check_PROGRAMS = char_utilities_test datetime_test
 TESTS = $(check_PROGRAMS)
