inserita opzione di debug che abilita le opzioni di compilazioni e la messaggistica per il debug
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@409 500a5620-302c-0410-bb8c-d54761bbe776

--- a/configure.ac
+++ b/configure.ac
@@ -28,6 +28,11 @@ AC_PROG_FC([gfortran pgf90 ifort g95 xlf90 f90])
 F77=$FC
 AC_FC_WRAPPERS()dnl Determine how to call C from Fortran
 
+AC_ARG_ENABLE(debug-mode,
+           [  --enable-debug-mode      enable debug mode],
+	   debug="yes", debug="no")
+AM_CONDITIONAL(DEBUG, test "x$debug" = "xyes")
+
 dnl search for log4c, if not found build a dummy log4fortran
 AC_CHECK_HEADERS([log4c.h] ,
   AC_CHECK_LIB([log4c], [log4c_init], , AC_MSG_ERROR([log4c broken!])),
