subarea conteneva una display con namespace "" che su un grib con 0 bit nella codifica dei dati provocava un segfault questa modifica ovvia almeno temporaneamente il problema. Il resto migliora la compilazione con debug
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@414 500a5620-302c-0410-bb8c-d54761bbe776

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -2,6 +2,12 @@ AM_FCFLAGS = -I../base -I../grib -I../volgrid6d -I../vol7d -I../qc -I../termolib
 EXTRA_DIST = log4crc
 bin_PROGRAMS =
 
+
+if DEBUG
+AM_FCFLAGS+= -g  -fbounds-check -DDEBUG
+endif
+
+
 noinst_PROGRAMS = esempio_file_utilities esempio_v7d esempio_qc_convert esempio_termolib log4fortran example_getopt
 
 esempio_file_utilities_SOURCES = esempio_file_utilities.f90
