porting to fedora 10
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@426 500a5620-302c-0410-bb8c-d54761bbe776

--- a/configure.ac
+++ b/configure.ac
@@ -162,11 +162,11 @@ AC_ARG_ENABLE(gribapi, AC_HELP_STRING([--disable-gribapi],
 if test "x$enableval" = "xyes"; then
  # test in f77 because f90 test do not work
  AC_CHECK_LIB([grib_api_f77], [grib_set_int],
- AC_MSG_RESULT([gribapi code included])
-  GRIBAPI_LIBS="-lgrib_api_f90 -lgrib_api"
-  AC_SUBST(GRIBAPI_LIBS),
- AC_MSG_ERROR([gribapi library not found]),
-[-lgrib_api])
+       AC_MSG_RESULT([gribapi code included])
+       GRIBAPI_LIBS="-lgrib_api_f90 -lgrib_api -ljasper"
+       AC_SUBST(GRIBAPI_LIBS),
+       AC_MSG_ERROR([gribapi library not found]),
+       [-lgrib_api -ljasper])
 else
 AC_MSG_RESULT([gribapi code not included])
 fi
