--- a/volgrid6d/Makefile.am
+++ b/volgrid6d/Makefile.am
@@ -1,6 +1,5 @@
 lib_LTLIBRARIES = libsim_volgrid6d.la
 
-
 # Opzioni Fortran (-I... sono da considerarsi opzioni fortran
 # e non del preprocessore perche' servono per USE e non per #include)
 AM_FCFLAGS = -I../base -I../log4fortran -I../vol7d
@@ -8,7 +7,6 @@ AM_FCFLAGS = -I../base -I../log4fortran -I../vol7d
 AM_LDFLAGS =
 # Librerie aggiuntive
 libsim_volgrid6d_la_LIBADD = ../base/libsim_base.la
-
 
 #noinst_HEADERS = ../vol7d/vol7d_distinct.F90
 
@@ -23,25 +21,21 @@ libsim_volgrid6d_la_LIBADD += $(GRIBAPI_LIBS)
 endif
 
 if NGMATH
-AM_FCFLAGS+=-DNGMATH
+AM_LDFLAGS += $(NGMATH_LDFLAGS)
+libsim_volgrid6d_la_LIBADD += $(NGMATH_LIBS)
 endif
-
-if DEBUG
-AM_FCFLAGS+= -g  -fbounds-check -DDEBUG
-endif
-
 
 if GRIBAPI
-grid_class.o:  regular_ll_class.$(OBJEXT) rotated_ll_class.$(OBJEXT)
-grid_class.lo:  regular_ll_class.$(OBJEXT) rotated_ll_class.$(OBJEXT)
-rotated_ll.o:  regular_ll_class.$(OBJEXT)
-rotated_ll.lo:  regular_ll_class.$(OBJEXT)
-volgrid6d_var_class.o:  ../vol7d/vol7d_distinct.F90
-volgrid6d_var_class.lo:  ../vol7d/vol7d_distinct.F90
-volgrid6d_class.o:  volgrid6d_var_class.$(OBJEXT) grid_class.$(OBJEXT) gridinfo_class.$(OBJEXT)
-volgrid6d_class.lo:  volgrid6d_var_class.$(OBJEXT) grid_class.$(OBJEXT) gridinfo_class.$(OBJEXT)
-gridinfo_class.o:  volgrid6d_var_class.$(OBJEXT) grid_class.$(OBJEXT)
-gridinfo_class.lo:  volgrid6d_var_class.$(OBJEXT) grid_class.$(OBJEXT)
+grid_class.o: regular_ll_class.$(OBJEXT) rotated_ll_class.$(OBJEXT)
+grid_class.lo: regular_ll_class.$(OBJEXT) rotated_ll_class.$(OBJEXT)
+rotated_ll.o: regular_ll_class.$(OBJEXT)
+rotated_ll.lo: regular_ll_class.$(OBJEXT)
+volgrid6d_var_class.o: ../vol7d/vol7d_distinct.F90
+volgrid6d_var_class.lo: ../vol7d/vol7d_distinct.F90
+volgrid6d_class.o: volgrid6d_var_class.$(OBJEXT) grid_class.$(OBJEXT) gridinfo_class.$(OBJEXT)
+volgrid6d_class.lo: volgrid6d_var_class.$(OBJEXT) grid_class.$(OBJEXT) gridinfo_class.$(OBJEXT)
+gridinfo_class.o: volgrid6d_var_class.$(OBJEXT) grid_class.$(OBJEXT)
+gridinfo_class.lo: volgrid6d_var_class.$(OBJEXT) grid_class.$(OBJEXT)
 endif
 
 mostlyclean-compile:
