--- a/log4fortran/Makefile.am
+++ b/log4fortran/Makefile.am
@@ -3,9 +3,9 @@ liblog4fortran_la_SOURCES = log4fortran.F90
 
 AM_FCFLAGS = -I../base
 
-if LOG4FORTRAN
+if LOG4C
 liblog4fortran_la_SOURCES += log4fortran_c.c
-liblog4fortran_la_LIBADD = -llog4c -lcnf
+liblog4fortran_la_LIBADD = $(LOG4C_LIBS)
 endif
 
 
