eliminato modulo delle costanti fisiche in termolib corrette alcune costanti nel modulo phys_const adattato termolib al nuovo modulo aggiunti test di dato mancante ad alcune unzioni sul vento
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@452 500a5620-302c-0410-bb8c-d54761bbe776

--- a/termolib/Makefile.am
+++ b/termolib/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES = libsim_termolib.la
-libsim_termolib_la_SOURCES =  phisical_constant.f90 termolib.f90
+libsim_termolib_la_SOURCES =  termolib.f90
 
 AM_FCFLAGS = -I../base
 libsim_termolib_la_LIBADD = ../base/libsim_base.la
