Aggiunto un modulo con operazioni statistiche elementari con dati mancanti, rivista la differenza filosofica tra doppia precisione e IEEE 8 byte, migliorata la documentazione.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@457 500a5620-302c-0410-bb8c-d54761bbe776

--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -1,7 +1,8 @@
 lib_LTLIBRARIES = libsim_base.la
 libsim_base_la_SOURCES = char_utilities.f90 datetime_class.f90 err_handling.f90 \
  file_utilities.f90 geo_coord_class.F90 geo_grid_class.f90 \
- io_units.f90 kinds.F90 missing_values.f90 phys_const.f90 getopt_m.f90 optional_values.f90
+ io_units.f90 kinds.F90 missing_values.f90 phys_const.f90 getopt_m.f90 optional_values.f90 \
+ simple_stat.f90
 
 if SHP
 libsim_base_la_LIBADD = $(SHP_LIBS)
@@ -29,8 +30,10 @@ optional_values.$(OBJEXT): missing_values.$(OBJEXT)
 optional_values.lo: missing_values.$(OBJEXT)
 getopt_m.$(OBJEXT): err_handling.$(OBJEXT)
 getopt_m.lo: err_handling.$(OBJEXT)
+simple_stat.$(OBJEXT): missing_values.$(OBJEXT)
+simple_stat.lo: missing_values.$(OBJEXT)
 
-check_PROGRAMS = char_utilities_test datetime_test
+check_PROGRAMS = char_utilities_test datetime_test simple_stat_test
 TESTS = $(check_PROGRAMS)
 
 char_utilities_test_SOURCES = char_utilities_test.f90
@@ -38,6 +41,9 @@ char_utilities_test_LDADD = libsim_base.la
 
 datetime_test_SOURCES = datetime_test.f90
 datetime_test_LDADD = libsim_base.la 
+
+simple_stat_test_SOURCES = simple_stat_test.f90
+simple_stat_test_LDADD = libsim_base.la
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT) *.mod
