Le funzioni di trasformazione di coordinate sono state spostate in un modulo di base per alleggerire grid_class e per permettere il loro uso anche con oggetti che non sono griglie.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@527 500a5620-302c-0410-bb8c-d54761bbe776

--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -2,7 +2,7 @@ lib_LTLIBRARIES = libsim_base.la
 libsim_base_la_SOURCES = char_utilities.f90 datetime_class.f90 err_handling.f90 \
  optional_values.f90 file_utilities.f90 geo_coord_class.F90 geo_grid_class.f90 \
  io_units.f90 kinds.F90 missing_values.f90 phys_const.f90 getopt_m.f90 \
- simple_stat.f90
+ simple_stat.f90 geo_transforms.f90
 
 if SHP
 libsim_base_la_LIBADD = $(SHP_LIBS)
@@ -32,6 +32,8 @@ getopt_m.$(OBJEXT): err_handling.$(OBJEXT)
 getopt_m.lo: err_handling.$(OBJEXT)
 simple_stat.$(OBJEXT): missing_values.$(OBJEXT)
 simple_stat.lo: missing_values.$(OBJEXT)
+geo_transforms.$(OBJEXT): phys_const.$(OBJEXT)
+geo_transforms.lo: phys_const.$(OBJEXT)
 
 check_PROGRAMS = char_utilities_test datetime_test simple_stat_test
 TESTS = $(check_PROGRAMS)
