--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 EXTRA_DIST = libsim.spec
 
 # Execute make in subdirs
-SUBDIRS = base log4fortran grib vol7d volgrid6d data qc termolib graphics examples doc 
+SUBDIRS = base log4fortran grib vol7d volgrid6d data qc termolib examples doc 
 
 if NCARG
 SUBDIRS += graphics
