se si disabilita graphics il makefile risulta vuoto e produce errore
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@529 500a5620-302c-0410-bb8c-d54761bbe776

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,3 +3,6 @@ EXTRA_DIST = libsim.spec
 # Execute make in subdirs
 SUBDIRS = base log4fortran grib vol7d volgrid6d data qc termolib graphics examples doc 
 
+if NCARG
+SUBDIRS += graphics
+endif
