Affinata la compilazione condizionale dei moduli con NCAR Graphics.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@532 500a5620-302c-0410-bb8c-d54761bbe776

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,11 +1,4 @@
 EXTRA_DIST = libsim.spec
 
 # Execute make in subdirs
-SUBDIRS = base log4fortran grib vol7d volgrid6d data qc termolib 
-
-if NCARG
-SUBDIRS += graphics
-endif
-
-#order is important
-SUBDIRS +=examples doc 
+SUBDIRS = base log4fortran grib vol7d volgrid6d data qc termolib graphics examples doc 
